# vision-parsing

./: .gitignore  main.py  pyproject.toml  upload.py
src/: embeddings.py  image2text.py
